discussion/kv_engine/173130/173130_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50984: Remove the checkpoint_memory_unreferenced stats

There's no unreferenced checkpoint in CM since Neo (see Eager
checkpoint removal for details). Unref checkpoints are always owned by
the DestroyerTask that also exposes its memory usage stats.

Change-Id: I2a80194b06f287c1229f7047f5002cdbb4c298fc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-08 07:32:46.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-08 07:34:17.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15462/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15462/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26709/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26709/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17397/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17397/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6242/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6242/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6182/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6182/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18635/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18635/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18301/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18301/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19331/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19331/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16527/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16527/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10:
error: "stats_config.def.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16527/ )
----------------------------------------------------------------------------------------------------------------------
